# elm-todo-app

./: Caddyfile  README.md  cabal.project  default.nix
be/: be.cabal
be/app/: ElmAPI.hs  Main.hs
be/src/TODO/: API.hs  Auth.hs  Domain.hs  Handlers.hs  Store.hs
be/src/TODO/Store/: InMemory.hs
be/src/TODO/Store/InMemory/: Type.hs
fe/: .gitignore  elm-srcs.nix  elm.json
fe/assets/: index.html
fe/src/: CSRF.elm  Items.elm  Main.elm  Tags.elm
fe/src/List/: Extra.elm
fe/src/Result/: Extra.elm
