cabal-version: 3.0
name:          be
version:       0.0.0.0
build-type:    Simple

common warnings
  default-language:   GHC2021
  default-extensions:
    BlockArguments
    DataKinds
    DerivingVia
    DuplicateRecordFields
    LambdaCase
    MultiWayIf
    NoFieldSelectors
    OverloadedRecordDot
    OverloadedStrings
    RecordWildCards

  ghc-options:        -Wall

library
  import:          warnings
  exposed-modules:
    TODO.API
    TODO.Auth
    TODO.Domain
    TODO.Handlers
    TODO.Store
    TODO.Store.InMemory
    TODO.Store.InMemory.Type

  build-depends:
    , aeson
    , base
    , bytestring
    , containers
    , cookie
    , deriving-aeson
    , http-types
    , mtl
    , servant
    , servant-server
    , tagged
    , text
    , uuid
    , wai

  hs-source-dirs:  src

executable be
  import:         warnings
  main-is:        Main.hs
  build-depends:
    , base
    , be
    , servant-server
    , warp

  hs-source-dirs: app

executable generate-elm-api
  import:         warnings
  main-is:        ElmAPI.hs
  build-depends:
    , base
    , be
    , elm-bridge
    , servant
    , servant-elm
    , text

  hs-source-dirs: app
